Exctracted code related to dorectories to files helpers, added validation for files chema in request processing, added select columns endpoint,
