# tables-handler.go
@@ -3,9 +3,7 @@ package main
 import (
 	"encoding/json"
 	"fmt"
-	"io/fs"
 	"net/http"
-	"os"
 	"path/filepath"
 )
 
@@ -14,26 +12,11 @@ import (
 // @Tags tables
 // @Produce json
 // @Success 200 {array} string "List of table names"
-// @Failure 500 {strinf} string "Internal server error"
+// @Failure 500 {string} string "Internal server error"
 // @Router /tables [get]
 func handleTablesQuery(w http.ResponseWriter, r *http.Request) {
-	dirs := []string{}
 
-	err := filepath.Walk(config.DataPath, func(path string, info fs.FileInfo, err error) error {
-		if err != nil {
-			return err
-		}
-		if info.IsDir() {
-			entries, err := os.ReadDir(path)
-			if err != nil {
-				return err
-			}
-			if len(entries) > 0 && path != config.DataPath {
-				dirs = append(dirs, filepath.Base(path))
-			}
-		}
-		return nil
-	})
+	dirs, err := findDataDirs()
 
 	if err != nil {
 		http.Error(w, fmt.Sprintf("Internal server error: %v", err), http.StatusInternalServerError)
@@ -45,7 +28,7 @@ func handleTablesQuery(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary Get table columns
-// @Description Returns column names and their types for a given table
+// @Description Returns column names and their types for a given table. Filters out columns of unsupported types.
 // @Tags tables
 // @Produce json
 // @Param name query string true "Table name"
@@ -72,7 +55,41 @@ func handleTablesColumnsQuery(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	columns = FilterUnsupportedParquetColumns(columns)
+	columns = FilterOutUnsupportedParquetColumns(columns)
+
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(columns)
+}
+
+// @Summary Get table columns that can be aggregated
+// @Description Returns column names and their types for a given table. Filters out columns of types unsupported for aggregations.
+// @Tags tables
+// @Produce json
+// @Param name query string true "Table name"
+// @Success 200 {array} []ParquetColumnInfo "List of columns with their types"
+// @Failure 400 {string} string "Bad request with error message"
+// @Failure 500 {string} string "Internal server error"
+// @Router /tables/select-columns [get]
+func handleTablesSelectColumnsQuery(w http.ResponseWriter, r *http.Request) {
+	tableName := r.URL.Query().Get("name")
+	if tableName == "" {
+		http.Error(w, "Missing table name", http.StatusBadRequest)
+		return
+	}
+
+	files, err := findDataFiles(tableName)
+	if err != nil || len(files) == 0 {
+		http.Error(w, fmt.Sprintf("No parquet files found for table: %s", tableName), http.StatusBadRequest)
+		return
+	}
+
+	columns, err := GetParquetSchema(filepath.Join(config.DataPath, files[0]))
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Error getting parquet schema: %v", err), http.StatusInternalServerError)
+		return
+	}
+
+	columns = FilterSelectParquetColumns(columns)
 
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(columns)
